--- a/package.json
+++ b/package.json
@@ -10,11 +10,17 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.17",
+    "bcryptjs": "^2.4.3",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
+    "js-cookie": "^3.0.5",
+    "mongoose": "^7.1.0",
     "next": "13.3.4",
+    "next-auth": "^4.22.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-toastify": "^9.1.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.4",
