--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
-MONGODB_URI=mongodb+srv://karamisa:ZAPNt1T4KK9OeKmI@ecomdb.70ehbuv.mongodb.net/next-tailwind-ecom?retryWrites=true&w=majority
 NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=ZAPNt1T4KK9OeKmI
+MONGODB_URI=mongodb+srv://karamisa:ZAPNt1T4KK9OeKmI@ecomdb.70ehbuv.mongodb.net/next-tailwind-ecom?retryWrites=true&w=majority
+
+
