added paypal api

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 NEXTAUTH_URL=http://localhost:3000
 NEXTAUTH_SECRET=ZAPNt1T4KK9OeKmI
 MONGODB_URI=mongodb+srv://karamisa:ZAPNt1T4KK9OeKmI@ecomdb.70ehbuv.mongodb.net/next-tailwind-ecom?retryWrites=true&w=majority
+PAYPAL_CLIENT_ID=AVJyZYn1EOLtoNJUkuYkxM6NA_D0FtMGC1Hm0HzXaR-weIY_WWWXkYZ4IHnU8QWU10HUs8uxbRseQMpe
 
 
