--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@paypal/react-paypal-js": "^7.8.3",
     "axios": "^1.4.0",
     "bcryptjs": "^2.4.3",
+    "chart.js": "^4.3.0",
+    "cloudinary": "^1.36.4",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.4",
     "js-cookie": "^3.0.5",
@@ -21,6 +23,7 @@
     "next": "13.3.4",
     "next-auth": "^4.3.4",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.9",
     "react-toastify": "^9.1.2"
