updated to next13 + new auth

--- a/.env
+++ b/.env
@@ -4,3 +4,4 @@ MONGODB_URI=mongodb+srv://karamisa:ZAPNt1T4KK9OeKmI@ecomdb.70ehbuv.mongodb.net/n
 PAYPAL_CLIENT_ID=AVJyZYn1EOLtoNJUkuYkxM6NA_D0FtMGC1Hm0HzXaR-weIY_WWWXkYZ4IHnU8QWU10HUs8uxbRseQMpe
 
 
+NEXT_PUBLIC_APP_URL=http://localhost:3000
