--- a/.env
+++ b/.env
@@ -5,3 +5,7 @@ PAYPAL_CLIENT_ID=AVJyZYn1EOLtoNJUkuYkxM6NA_D0FtMGC1Hm0HzXaR-weIY_WWWXkYZ4IHnU8QW
 
 
 NEXT_PUBLIC_APP_URL=http://localhost:3000
+
+NEXT_PUBLIC_CLOUDINARY_API_KEY=166929114921417
+CLOUDINARY_SECRET=L8zXbni9KlRdNehW9bUYdn56Fm0
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=djewcgdtr
